# 4sight

./: .env.example  .gitignore  CLAUDE.md  README.md  prompt.md  pyproject.toml
documentation/: jira-integration.md
src/foursight/: api.py  assess.py  company_fixture.py  db.py  demo.py  demo_jira.py  demo_supply_chain.py  fakes.py  flatten.py  graph_store.py  llm.py  mcp_server.py  mock_server.py  models.py  propagation.py  reports.py  rules.py  seed.py  sensitivity.py  supply_chain_fixture.py  testkit.py  triggers.py  vector_store.py
src/foursight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/foursight/fixtures/mock_company/: topology.json
src/foursight/ingestion/: base.py  csv_adapter.py  payroll_redacted.py
src/foursight/integrations/: __init__.py  jira.py  jira_client.py  jira_notifier.py  jira_router.py
src/foursight/web/: app.js  builder.css  builder.html  builder.js  graph.html  graph.js  index.html  raw.html  raw.js
tests/: conftest.py  test_api.py  test_assess.py  test_batch_assess.py  test_builder_api.py  test_company_fixture.py  test_db.py  test_dedup.py  test_fakes.py  test_flatten.py  test_graph_store.py  test_ingestion.py  test_integration.py  test_jira_integration.py  test_llm.py  test_load_company.py  test_mcp_server.py  test_models.py  test_propagation.py  test_properties.py  test_reports.py  test_rules.py  test_scenarios.py  test_seed.py  test_sensitivity.py  test_smoke.py  test_supply_chain_fixture.py  test_supply_chain_scenarios.py  test_triggers.py  test_vector_store.py
(+5 files in other folders)
