[project]
name = "foursight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6", "networkx>=3.2", "chromadb>=0.5", "openai>=1.30",
  "fastapi>=0.110", "uvicorn>=0.29", "fastmcp>=2.0", "python-dotenv>=1.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
