[project]
name = "foursight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6", "networkx>=3.2", "chromadb>=0.5", "openai>=1.30",
  "anthropic>=0.40", "fastapi>=0.110", "uvicorn>=0.29", "fastmcp>=2.0",
  "python-dotenv>=1.0", "httpx>=0.27",
]
[project.optional-dependencies]
dev = ["pytest>=8.0"]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
foursight = ["fixtures/mock_company/topology.json", "fixtures/mock_company/policies/*.md", "fixtures/supply_chain/topology.json", "fixtures/supply_chain/policies/*.md"]
